# llwinecellar

./: .env.example  .gitignore  manage.py  pyproject.toml
cellars/: enums.py  serializers.py
cellars/migrations/: 0001_initial.py  0002_alter_cellarspace_wine.py  0002_cellarspace.py
cellars/models/: __init__.py  cellar.py  cellar_space.py
cellars/tests/: test_cellar_model.py  test_cellar_space_model.py  test_cellar_views.py
cellars/use_cases/: __init__.py  create_cellar.py  list_cellars.py
cellars/views/: __init__.py  cellar_views.py
http/: README.md  cellars.http  grape_masters.http  user_preference.http  wine_regions.http  wine_tags.http  wines.http
llwc-front/: biome.json  package-lock.json  package.json
llwc-front/public/: index.html  manifest.json
llwc-front/src/: App.css  App.test.tsx  App.tsx  Login.tsx  index.tsx  testPage.tsx
llwinecellar/: asgi.py  exception_handler.py  logging.py  settings.py  urls.py  wsgi.py
llwinecellar/settings/: base.py  local.py  production.py  testing.py
user_preferences/: apps.py  serializers.py
user_preferences/migrations/: 0001_initial.py
user_preferences/models/: __init__.py  user_preference.py
user_preferences/tests/: test_user_preference_model.py  test_user_preference_views.py
user_preferences/use_cases/: __init__.py  create_user_preference.py  list_user_preference.py
user_preferences/views/: __init__.py  user_preference_views.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py
users/models/: user.py
users/tests/: test_user_model.py
wine_memos/: apps.py
wine_memos/migrations/: 0001_initial.py
wines/: enums.py  serializers.py
(+138 files in other folders)
